app/src/main/java/com/example/todolist/domain/errors/ErrorDefault.kt
package com.example.todolist.domain.errors

sealed interface ErrorDefault